// Vitest Snapshot v1, https://vitest.dev/guide/snapshot.html

exports[`financial report query optimization preserves all totals > preserves the complete report for all 1`] = `
{
  "bonusDeviceProfitTjs": 0,
  "bonusDeviceProfitUsd": 0,
  "cogsTjs": 3282164.1,
  "cogsUsd": 328216.41,
  "exchangesCount": 0,
  "expensesTjs": 24680,
  "expensesUsd": 2460,
  "freeDeviceBonusesInStock": 1,
  "giftDeviceProfitTjs": 615246,
  "giftDeviceProfitUsd": 61524.6,
  "giftDeviceUnitsSold": 205,
  "grossMarginPercent": 40.8,
  "grossProfitTjs": 2258051.1,
  "grossProfitUsd": 225805.11,
  "mainWarehouseCashTjs": 345.7,
  "mainWarehouseCashUsd": 34.57,
  "mainWarehouseExpenses": {
    "expenseFxUsd": 0,
    "expensesByCategory": [],
    "expensesTjs": 0,
    "expensesUsd": 0,
    "unpaidExpensesTjs": 0,
  },
  "mainWarehouseStockCostTjs": 1000.1,
  "mainWarehouseStockCostUsd": 100.01,
  "mainWarehouseStockCount": 2,
  "modelCounts": [
    {
      "cogsUsd": 46802.34,
      "count": 264,
      "name": "Phone M2",
      "profitUsd": 32429.34,
      "revenueUsd": 79231.68,
    },
    {
      "cogsUsd": 46802.34,
      "count": 264,
      "name": "Phone M4",
      "profitUsd": 32429.34,
      "revenueUsd": 79231.68,
    },
    {
      "cogsUsd": 46602.33,
      "count": 263,
      "name": "Phone M6",
      "profitUsd": 32329.23,
      "revenueUsd": 78931.56,
    },
    {
      "cogsUsd": 47002.35,
      "count": 264,
      "name": "Phone M1",
      "profitUsd": 32229.33,
      "revenueUsd": 79231.68,
    },
    {
      "cogsUsd": 47002.35,
      "count": 264,
      "name": "Phone M3",
      "profitUsd": 32229.33,
      "revenueUsd": 79231.68,
    },
    {
      "cogsUsd": 47002.35,
      "count": 264,
      "name": "Phone M0",
      "profitUsd": 32229.33,
      "revenueUsd": 79231.68,
    },
    {
      "cogsUsd": 47002.35,
      "count": 263,
      "name": "Phone M5",
      "profitUsd": 31929.21,
      "revenueUsd": 78931.56,
    },
  ],
  "netProfitTjs": 2235265.3,
  "netProfitUsd": 223534.53,
  "periodCashBonusesTjs": 255,
  "periodCashBonusesUsd": 25.5,
  "periodDebtFxTjs": 0,
  "periodDebtFxUsd": 0,
  "periodExpenseFxUsd": 0,
  "periodFreeDeviceBonusesReceived": 1,
  "periodRefundFxTjs": 0,
  "periodRefundFxUsd": 0,
  "periodRefundPenaltiesTjs": 1894.2,
  "periodRefundPenaltiesUsd": 189.42,
  "profitTjs": 2259945.3,
  "profitUsd": 225994.53,
  "refundsCount": 154,
  "refundsRevenueUsd": 46218.48,
  "revenueTjs": 5540215.2,
  "revenueUsd": 554021.52,
  "salesCount": 1846,
  "storeBreakdown": [
    {
      "bonusDeviceProfitTjs": 0,
      "bonusDeviceProfitUsd": 0,
      "cashTjs": 1010,
      "cashUsd": 101,
      "cogsTjs": 166008.3,
      "cogsUsd": 16600.83,
      "debtFxUsd": 0,
      "expenseFxUsd": 0,
      "expensesByCategory": [
        {
          "amountTjs": 1234,
          "amountUsd": 123,
          "category": "OTHER",
        },
      ],
      "expensesTjs": 1234,
      "expensesUsd": 123,
      "netProfitTjs": 111955.4,
      "netProfitUsd": 11195.94,
      "profitTjs": 113189.4,
      "profitUsd": 11318.94,
      "refundFxUsd": 0,
      "refundPenaltiesUsd": 8.61,
      "refundsCount": 7,
      "revenueTjs": 279111.6,
      "revenueUsd": 27911.16,
      "salesCount": 93,
      "stockCostTjs": 999.9,
      "stockCostUsd": 99.99,
      "stockCount": 1,
      "storeId": "store-1",
      "storeName": "Store 1",
      "topModels": [
        {
          "count": 14,
          "name": "Phone M0",
          "profitUsd": 1801.56,
          "revenueUsd": 4201.68,
        },
        {
          "count": 14,
          "name": "Phone M1",
          "profitUsd": 1601.55,
          "revenueUsd": 4201.68,
        },
        {
          "count": 13,
          "name": "Phone M5",
          "profitUsd": 1701.45,
          "revenueUsd": 3901.56,
        },
        {
          "count": 13,
          "name": "Phone M4",
          "profitUsd": 1701.45,
          "revenueUsd": 3901.56,
        },
        {
          "count": 13,
          "name": "Phone M6",
          "profitUsd": 1501.44,
          "revenueUsd": 3901.56,
        },
      ],
      "unitsSold": 93,
      "unpaidExpensesTjs": 0,
    },
    {
      "bonusDeviceProfitTjs": 0,
      "bonusDeviceProfitUsd": 0,
      "cashTjs": 1020,
      "cashUsd": 102,
      "cogsTjs": 166008.3,
      "cogsUsd": 16600.83,
      "debtFxUsd": 0,
      "expenseFxUsd": 0,
      "expensesByCategory": [
        {
          "amountTjs": 1234,
          "amountUsd": 123,
          "category": "OTHER",
        },
      ],
      "expensesTjs": 1234,
      "expensesUsd": 123,
      "netProfitTjs": 111955.4,
      "netProfitUsd": 11195.94,
      "profitTjs": 113189.4,
      "profitUsd": 11318.94,
      "refundFxUsd": 0,
      "refundPenaltiesUsd": 8.61,
      "refundsCount": 7,
      "revenueTjs": 279111.6,
      "revenueUsd": 27911.16,
      "salesCount": 93,
      "stockCostTjs": 999.9,
      "stockCostUsd": 99.99,
      "stockCount": 1,
      "storeId": "store-2",
      "storeName": "Store 2",
      "topModels": [
        {
          "count": 14,
          "name": "Phone M1",
          "profitUsd": 1801.56,
          "revenueUsd": 4201.68,
        },
        {
          "count": 14,
          "name": "Phone M2",
          "profitUsd": 1601.55,
          "revenueUsd": 4201.68,
        },
        {
          "count": 13,
          "name": "Phone M6",
          "profitUsd": 1701.45,
          "revenueUsd": 3901.56,
        },
        {
          "count": 13,
          "name": "Phone M4",
          "profitUsd": 1701.45,
          "revenueUsd": 3901.56,
        },
        {
          "count": 13,
          "name": "Phone M0",
          "profitUsd": 1501.44,
          "revenueUsd": 3901.56,
        },
      ],
      "unitsSold": 93,
      "unpaidExpensesTjs": 0,
    },
    {
      "bonusDeviceProfitTjs": 0,
      "bonusDeviceProfitUsd": 0,
      "cashTjs": 1070,
      "cashUsd": 107,
      "cogsTjs": 166008.3,
      "cogsUsd": 16600.83,
      "debtFxUsd": 0,
      "expenseFxUsd": 0,
      "expensesByCategory": [
        {
          "amountTjs": 1234,
          "amountUsd": 123,
          "category": "OTHER",
        },
      ],
      "expensesTjs": 1234,
      "expensesUsd": 123,
      "netProfitTjs": 111955.4,
      "netProfitUsd": 11195.94,
      "profitTjs": 113189.4,
      "profitUsd": 11318.94,
      "refundFxUsd": 0,
      "refundPenaltiesUsd": 8.61,
      "refundsCount": 7,
      "revenueTjs": 279111.6,
      "revenueUsd": 27911.16,
      "salesCount": 93,
      "stockCostTjs": 999.9,
      "stockCostUsd": 99.99,
      "stockCount": 1,
      "storeId": "store-7",
      "storeName": "Store 7",
      "topModels": [
        {
          "count": 14,
          "name": "Phone M0",
          "profitUsd": 1801.56,
          "revenueUsd": 4201.68,
        },
        {
          "count": 14,
          "name": "Phone M6",
          "profitUsd": 1601.55,
          "revenueUsd": 4201.68,
        },
        {
          "count": 13,
          "name": "Phone M4",
          "profitUsd": 1701.45,
          "revenueUsd": 3901.56,
        },
        {
          "count": 13,
          "name": "Phone M2",
          "profitUsd": 1701.45,
          "revenueUsd": 3901.56,
        },
        {
          "count": 13,
          "name": "Phone M5",
          "profitUsd": 1501.44,
          "revenueUsd": 3901.56,
        },
      ],
      "unitsSold": 93,
      "unpaidExpensesTjs": 0,
    },
    {
      "bonusDeviceProfitTjs": 0,
      "bonusDeviceProfitUsd": 0,
      "cashTjs": 1080,
      "cashUsd": 108,
      "cogsTjs": 166008.3,
      "cogsUsd": 16600.83,
      "debtFxUsd": 0,
      "expenseFxUsd": 0,
      "expensesByCategory": [
        {
          "amountTjs": 1234,
          "amountUsd": 123,
          "category": "OTHER",
        },
      ],
      "expensesTjs": 1234,
      "expensesUsd": 123,
      "netProfitTjs": 111955.4,
      "netProfitUsd": 11195.94,
      "profitTjs": 113189.4,
      "profitUsd": 11318.94,
      "refundFxUsd": 0,
      "refundPenaltiesUsd": 8.61,
      "refundsCount": 7,
      "revenueTjs": 279111.6,
      "revenueUsd": 27911.16,
      "salesCount": 93,
      "stockCostTjs": 999.9,
      "stockCostUsd": 99.99,
      "stockCount": 1,
      "storeId": "store-8",
      "storeName": "Store 8",
      "topModels": [
        {
          "count": 14,
          "name": "Phone M1",
          "profitUsd": 1801.56,
          "revenueUsd": 4201.68,
        },
        {
          "count": 14,
          "name": "Phone M0",
          "profitUsd": 1601.55,
          "revenueUsd": 4201.68,
        },
        {
          "count": 13,
          "name": "Phone M4",
          "profitUsd": 1701.45,
          "revenueUsd": 3901.56,
        },
        {
          "count": 13,
          "name": "Phone M3",
          "profitUsd": 1701.45,
          "revenueUsd": 3901.56,
        },
        {
          "count": 13,
          "name": "Phone M6",
          "profitUsd": 1501.44,
          "revenueUsd": 3901.56,
        },
      ],
      "unitsSold": 93,
      "unpaidExpensesTjs": 0,
    },
    {
      "bonusDeviceProfitTjs": 0,
      "bonusDeviceProfitUsd": 0,
      "cashTjs": 1140,
      "cashUsd": 114,
      "cogsTjs": 166008.3,
      "cogsUsd": 16600.83,
      "debtFxUsd": 0,
      "expenseFxUsd": 0,
      "expensesByCategory": [
        {
          "amountTjs": 1234,
          "amountUsd": 123,
          "category": "OTHER",
        },
      ],
      "expensesTjs": 1234,
      "expensesUsd": 123,
      "netProfitTjs": 111955.4,
      "netProfitUsd": 11195.94,
      "profitTjs": 113189.4,
      "profitUsd": 11318.94,
      "refundFxUsd": 0,
      "refundPenaltiesUsd": 8.61,
      "refundsCount": 7,
      "revenueTjs": 279111.6,
      "revenueUsd": 27911.16,
      "salesCount": 93,
      "stockCostTjs": 999.9,
      "stockCostUsd": 99.99,
      "stockCount": 1,
      "storeId": "store-14",
      "storeName": "Store 14",
      "topModels": [
        {
          "count": 14,
          "name": "Phone M6",
          "profitUsd": 1801.56,
          "revenueUsd": 4201.68,
        },
        {
          "count": 14,
          "name": "Phone M0",
          "profitUsd": 1601.55,
          "revenueUsd": 4201.68,
        },
        {
          "count": 13,
          "name": "Phone M5",
          "profitUsd": 1701.45,
          "revenueUsd": 3901.56,
        },
        {
          "count": 13,
          "name": "Phone M1",
          "profitUsd": 1701.45,
          "revenueUsd": 3901.56,
        },
        {
          "count": 13,
          "name": "Phone M4",
          "profitUsd": 1501.44,
          "revenueUsd": 3901.56,
        },
      ],
      "unitsSold": 93,
      "unpaidExpensesTjs": 0,
    },
    {
      "bonusDeviceProfitTjs": 0,
      "bonusDeviceProfitUsd": 0,
      "cashTjs": 1150,
      "cashUsd": 115,
      "cogsTjs": 166008.3,
      "cogsUsd": 16600.83,
      "debtFxUsd": 0,
      "expenseFxUsd": 0,
      "expensesByCategory": [
        {
          "amountTjs": 1234,
          "amountUsd": 123,
          "category": "OTHER",
        },
      ],
      "expensesTjs": 1234,
      "expensesUsd": 123,
      "netProfitTjs": 111955.4,
      "netProfitUsd": 11195.94,
      "profitTjs": 113189.4,
      "profitUsd": 11318.94,
      "refundFxUsd": 0,
      "refundPenaltiesUsd": 8.61,
      "refundsCount": 7,
      "revenueTjs": 279111.6,
      "revenueUsd": 27911.16,
      "salesCount": 93,
      "stockCostTjs": 999.9,
      "stockCostUsd": 99.99,
      "stockCount": 1,
      "storeId": "store-15",
      "storeName": "Store 15",
      "topModels": [
        {
          "count": 14,
          "name": "Phone M0",
          "profitUsd": 1801.56,
          "revenueUsd": 4201.68,
        },
        {
          "count": 14,
          "name": "Phone M1",
          "profitUsd": 1601.55,
          "revenueUsd": 4201.68,
        },
        {
          "count": 13,
          "name": "Phone M3",
          "profitUsd": 1701.45,
          "revenueUsd": 3901.56,
        },
        {
          "count": 13,
          "name": "Phone M2",
          "profitUsd": 1701.45,
          "revenueUsd": 3901.56,
        },
        {
          "count": 13,
          "name": "Phone M6",
          "profitUsd": 1501.44,
          "revenueUsd": 3901.56,
        },
      ],
      "unitsSold": 93,
      "unpaidExpensesTjs": 0,
    },
    {
      "bonusDeviceProfitTjs": 0,
      "bonusDeviceProfitUsd": 0,
      "cashTjs": 1000,
      "cashUsd": 100,
      "cogsTjs": 162008.1,
      "cogsUsd": 16200.81,
      "debtFxUsd": 0,
      "expenseFxUsd": 0,
      "expensesByCategory": [
        {
          "amountTjs": 1234,
          "amountUsd": 123,
          "category": "OTHER",
        },
      ],
      "expensesTjs": 1234,
      "expensesUsd": 123,
      "netProfitTjs": 112966.7,
      "netProfitUsd": 11297.07,
      "profitTjs": 114200.7,
      "profitUsd": 11420.07,
      "refundFxUsd": 0,
      "refundPenaltiesUsd": 9.84,
      "refundsCount": 8,
      "revenueTjs": 276110.4,
      "revenueUsd": 27611.04,
      "salesCount": 92,
      "stockCostTjs": 999.9,
      "stockCostUsd": 99.99,
      "stockCount": 1,
      "storeId": "store-0",
      "storeName": "Store 0",
      "topModels": [
        {
          "count": 14,
          "name": "Phone M6",
          "profitUsd": 1801.56,
          "revenueUsd": 4201.68,
        },
        {
          "count": 13,
          "name": "Phone M5",
          "profitUsd": 1701.45,
          "revenueUsd": 3901.56,
        },
        {
          "count": 13,
          "name": "Phone M3",
          "profitUsd": 1701.45,
          "revenueUsd": 3901.56,
        },
        {
          "count": 13,
          "name": "Phone M1",
          "profitUsd": 1701.45,
          "revenueUsd": 3901.56,
        },
        {
          "count": 13,
          "name": "Phone M4",
          "profitUsd": 1501.44,
          "revenueUsd": 3901.56,
        },
      ],
      "unitsSold": 92,
      "unpaidExpensesTjs": 0,
    },
    {
      "bonusDeviceProfitTjs": 0,
      "bonusDeviceProfitUsd": 0,
      "cashTjs": 1030,
      "cashUsd": 103,
      "cogsTjs": 162008.1,
      "cogsUsd": 16200.81,
      "debtFxUsd": 0,
      "expenseFxUsd": 0,
      "expensesByCategory": [
        {
          "amountTjs": 1234,
          "amountUsd": 123,
          "category": "OTHER",
        },
      ],
      "expensesTjs": 1234,
      "expensesUsd": 123,
      "netProfitTjs": 112966.7,
      "netProfitUsd": 11297.07,
      "profitTjs": 114200.7,
      "profitUsd": 11420.07,
      "refundFxUsd": 0,
      "refundPenaltiesUsd": 9.84,
      "refundsCount": 8,
      "revenueTjs": 276110.4,
      "revenueUsd": 27611.04,
      "salesCount": 92,
      "stockCostTjs": 999.9,
      "stockCostUsd": 99.99,
      "stockCount": 1,
      "storeId": "store-3",
      "storeName": "Store 3",
      "topModels": [
        {
          "count": 14,
          "name": "Phone M2",
          "profitUsd": 1601.55,
          "revenueUsd": 4201.68,
        },
        {
          "count": 13,
          "name": "Phone M3",
          "profitUsd": 1701.45,
          "revenueUsd": 3901.56,
        },
        {
          "count": 13,
          "name": "Phone M1",
          "profitUsd": 1701.45,
          "revenueUsd": 3901.56,
        },
        {
          "count": 13,
          "name": "Phone M0",
          "profitUsd": 1701.45,
          "revenueUsd": 3901.56,
        },
        {
          "count": 13,
          "name": "Phone M5",
          "profitUsd": 1701.45,
          "revenueUsd": 3901.56,
        },
      ],
      "unitsSold": 92,
      "unpaidExpensesTjs": 0,
    },
    {
      "bonusDeviceProfitTjs": 0,
      "bonusDeviceProfitUsd": 0,
      "cashTjs": 1040,
      "cashUsd": 104,
      "cogsTjs": 164008.2,
      "cogsUsd": 16400.82,
      "debtFxUsd": 0,
      "expenseFxUsd": 0,
      "expensesByCategory": [
        {
          "amountTjs": 1234,
          "amountUsd": 123,
          "category": "OTHER",
        },
      ],
      "expensesTjs": 1234,
      "expensesUsd": 123,
      "netProfitTjs": 110966.6,
      "netProfitUsd": 11097.06,
      "profitTjs": 112200.6,
      "profitUsd": 11220.06,
      "refundFxUsd": 0,
      "refundPenaltiesUsd": 9.84,
      "refundsCount": 8,
      "revenueTjs": 276110.4,
      "revenueUsd": 27611.04,
      "salesCount": 92,
      "stockCostTjs": 999.9,
      "stockCostUsd": 99.99,
      "stockCount": 1,
      "storeId": "store-4",
      "storeName": "Store 4",
      "topModels": [
        {
          "count": 14,
          "name": "Phone M4",
          "profitUsd": 1601.55,
          "revenueUsd": 4201.68,
        },
        {
          "count": 14,
          "name": "Phone M3",
          "profitUsd": 1601.55,
          "revenueUsd": 4201.68,
        },
        {
          "count": 13,
          "name": "Phone M2",
          "profitUsd": 1701.45,
          "revenueUsd": 3901.56,
        },
        {
          "count": 13,
          "name": "Phone M0",
          "profitUsd": 1701.45,
          "revenueUsd": 3901.56,
        },
        {
          "count": 13,
          "name": "Phone M5",
          "profitUsd": 1701.45,
          "revenueUsd": 3901.56,
        },
      ],
      "unitsSold": 92,
      "unpaidExpensesTjs": 0,
    },
    {
      "bonusDeviceProfitTjs": 0,
      "bonusDeviceProfitUsd": 0,
      "cashTjs": 1050,
      "cashUsd": 105,
      "cogsTjs": 164008.2,
      "cogsUsd": 16400.82,
      "debtFxUsd": 0,
      "expenseFxUsd": 0,
      "expensesByCategory": [
        {
          "amountTjs": 1234,
          "amountUsd": 123,
          "category": "OTHER",
        },
      ],
      "expensesTjs": 1234,
      "expensesUsd": 123,
      "netProfitTjs": 110966.6,
      "netProfitUsd": 11097.06,
      "profitTjs": 112200.6,
      "profitUsd": 11220.06,
      "refundFxUsd": 0,
      "refundPenaltiesUsd": 9.84,
      "refundsCount": 8,
      "revenueTjs": 276110.4,
      "revenueUsd": 27611.04,
      "salesCount": 92,
      "stockCostTjs": 999.9,
      "stockCostUsd": 99.99,
      "stockCount": 1,
      "storeId": "store-5",
      "storeName": "Store 5",
      "topModels": [
        {
          "count": 14,
          "name": "Phone M5",
          "profitUsd": 1601.55,
          "revenueUsd": 4201.68,
        },
        {
          "count": 14,
          "name": "Phone M4",
          "profitUsd": 1601.55,
          "revenueUsd": 4201.68,
        },
        {
          "count": 13,
          "name": "Phone M3",
          "profitUsd": 1701.45,
          "revenueUsd": 3901.56,
        },
        {
          "count": 13,
          "name": "Phone M1",
          "profitUsd": 1701.45,
          "revenueUsd": 3901.56,
        },
        {
          "count": 13,
          "name": "Phone M6",
          "profitUsd": 1701.45,
          "revenueUsd": 3901.56,
        },
      ],
      "unitsSold": 92,
      "unpaidExpensesTjs": 0,
    },
    {
      "bonusDeviceProfitTjs": 0,
      "bonusDeviceProfitUsd": 0,
      "cashTjs": 1060,
      "cashUsd": 106,
      "cogsTjs": 162008.1,
      "cogsUsd": 16200.81,
      "debtFxUsd": 0,
      "expenseFxUsd": 0,
      "expensesByCategory": [
        {
          "amountTjs": 1234,
          "amountUsd": 123,
          "category": "OTHER",
        },
      ],
      "expensesTjs": 1234,
      "expensesUsd": 123,
      "netProfitTjs": 112966.7,
      "netProfitUsd": 11297.07,
      "profitTjs": 114200.7,
      "profitUsd": 11420.07,
      "refundFxUsd": 0,
      "refundPenaltiesUsd": 9.84,
      "refundsCount": 8,
      "revenueTjs": 276110.4,
      "revenueUsd": 27611.04,
      "salesCount": 92,
      "stockCostTjs": 999.9,
      "stockCostUsd": 99.99,
      "stockCount": 1,
      "storeId": "store-6",
      "storeName": "Store 6",
      "topModels": [
        {
          "count": 14,
          "name": "Phone M6",
          "profitUsd": 1601.55,
          "revenueUsd": 4201.68,
        },
        {
          "count": 13,
          "name": "Phone M3",
          "profitUsd": 1701.45,
          "revenueUsd": 3901.56,
        },
        {
          "count": 13,
          "name": "Phone M1",
          "profitUsd": 1701.45,
          "revenueUsd": 3901.56,
        },
        {
          "count": 13,
          "name": "Phone M0",
          "profitUsd": 1701.45,
          "revenueUsd": 3901.56,
        },
        {
          "count": 13,
          "name": "Phone M5",
          "profitUsd": 1701.45,
          "revenueUsd": 3901.56,
        },
      ],
      "unitsSold": 92,
      "unpaidExpensesTjs": 0,
    },
    {
      "bonusDeviceProfitTjs": 0,
      "bonusDeviceProfitUsd": 0,
      "cashTjs": 1090,
      "cashUsd": 109,
      "cogsTjs": 162008.1,
      "cogsUsd": 16200.81,
      "debtFxUsd": 0,
      "expenseFxUsd": 0,
      "expensesByCategory": [
        {
          "amountTjs": 1234,
          "amountUsd": 123,
          "category": "OTHER",
        },
      ],
      "expensesTjs": 1234,
      "expensesUsd": 123,
      "netProfitTjs": 112966.7,
      "netProfitUsd": 11297.07,
      "profitTjs": 114200.7,
      "profitUsd": 11420.07,
      "refundFxUsd": 0,
      "refundPenaltiesUsd": 9.84,
      "refundsCount": 8,
      "revenueTjs": 276110.4,
      "revenueUsd": 27611.04,
      "salesCount": 92,
      "stockCostTjs": 999.9,
      "stockCostUsd": 99.99,
      "stockCount": 1,
      "storeId": "store-9",
      "storeName": "Store 9",
      "topModels": [
        {
          "count": 14,
          "name": "Phone M2",
          "profitUsd": 1801.56,
          "revenueUsd": 4201.68,
        },
        {
          "count": 13,
          "name": "Phone M0",
          "profitUsd": 1701.45,
          "revenueUsd": 3901.56,
        },
        {
          "count": 13,
          "name": "Phone M5",
          "profitUsd": 1701.45,
          "revenueUsd": 3901.56,
        },
        {
          "count": 13,
          "name": "Phone M3",
          "profitUsd": 1701.45,
          "revenueUsd": 3901.56,
        },
        {
          "count": 13,
          "name": "Phone M1",
          "profitUsd": 1501.44,
          "revenueUsd": 3901.56,
        },
      ],
      "unitsSold": 92,
      "unpaidExpensesTjs": 0,
    },
    {
      "bonusDeviceProfitTjs": 0,
      "bonusDeviceProfitUsd": 0,
      "cashTjs": 1100,
      "cashUsd": 110,
      "cogsTjs": 164008.2,
      "cogsUsd": 16400.82,
      "debtFxUsd": 0,
      "expenseFxUsd": 0,
      "expensesByCategory": [
        {
          "amountTjs": 1234,
          "amountUsd": 123,
          "category": "OTHER",
        },
      ],
      "expensesTjs": 1234,
      "expensesUsd": 123,
      "netProfitTjs": 110966.6,
      "netProfitUsd": 11097.06,
      "profitTjs": 112200.6,
      "profitUsd": 11220.06,
      "refundFxUsd": 0,
      "refundPenaltiesUsd": 9.84,
      "refundsCount": 8,
      "revenueTjs": 276110.4,
      "revenueUsd": 27611.04,
      "salesCount": 92,
      "stockCostTjs": 999.9,
      "stockCostUsd": 99.99,
      "stockCount": 1,
      "storeId": "store-10",
      "storeName": "Store 10",
      "topModels": [
        {
          "count": 14,
          "name": "Phone M2",
          "profitUsd": 1801.56,
          "revenueUsd": 4201.68,
        },
        {
          "count": 14,
          "name": "Phone M3",
          "profitUsd": 1601.55,
          "revenueUsd": 4201.68,
        },
        {
          "count": 13,
          "name": "Phone M0",
          "profitUsd": 1701.45,
          "revenueUsd": 3901.56,
        },
        {
          "count": 13,
          "name": "Phone M6",
          "profitUsd": 1701.45,
          "revenueUsd": 3901.56,
        },
        {
          "count": 13,
          "name": "Phone M5",
          "profitUsd": 1501.44,
          "revenueUsd": 3901.56,
        },
      ],
      "unitsSold": 92,
      "unpaidExpensesTjs": 0,
    },
    {
      "bonusDeviceProfitTjs": 0,
      "bonusDeviceProfitUsd": 0,
      "cashTjs": 1110,
      "cashUsd": 111,
      "cogsTjs": 164008.2,
      "cogsUsd": 16400.82,
      "debtFxUsd": 0,
      "expenseFxUsd": 0,
      "expensesByCategory": [
        {
          "amountTjs": 1234,
          "amountUsd": 123,
          "category": "OTHER",
        },
      ],
      "expensesTjs": 1234,
      "expensesUsd": 123,
      "netProfitTjs": 110966.6,
      "netProfitUsd": 11097.06,
      "profitTjs": 112200.6,
      "profitUsd": 11220.06,
      "refundFxUsd": 0,
      "refundPenaltiesUsd": 9.84,
      "refundsCount": 8,
      "revenueTjs": 276110.4,
      "revenueUsd": 27611.04,
      "salesCount": 92,
      "stockCostTjs": 999.9,
      "stockCostUsd": 99.99,
      "stockCount": 1,
      "storeId": "store-11",
      "storeName": "Store 11",
      "topModels": [
        {
          "count": 14,
          "name": "Phone M4",
          "profitUsd": 1801.56,
          "revenueUsd": 4201.68,
        },
        {
          "count": 14,
          "name": "Phone M3",
          "profitUsd": 1801.56,
          "revenueUsd": 4201.68,
        },
        {
          "count": 13,
          "name": "Phone M6",
          "profitUsd": 1701.45,
          "revenueUsd": 3901.56,
        },
        {
          "count": 13,
          "name": "Phone M2",
          "profitUsd": 1501.44,
          "revenueUsd": 3901.56,
        },
        {
          "count": 13,
          "name": "Phone M1",
          "profitUsd": 1501.44,
          "revenueUsd": 3901.56,
        },
      ],
      "unitsSold": 92,
      "unpaidExpensesTjs": 0,
    },
    {
      "bonusDeviceProfitTjs": 0,
      "bonusDeviceProfitUsd": 0,
      "cashTjs": 1120,
      "cashUsd": 112,
      "cogsTjs": 164008.2,
      "cogsUsd": 16400.82,
      "debtFxUsd": 0,
      "expenseFxUsd": 0,
      "expensesByCategory": [
        {
          "amountTjs": 1234,
          "amountUsd": 123,
          "category": "OTHER",
        },
      ],
      "expensesTjs": 1234,
      "expensesUsd": 123,
      "netProfitTjs": 110966.6,
      "netProfitUsd": 11097.06,
      "profitTjs": 112200.6,
      "profitUsd": 11220.06,
      "refundFxUsd": 0,
      "refundPenaltiesUsd": 9.84,
      "refundsCount": 8,
      "revenueTjs": 276110.4,
      "revenueUsd": 27611.04,
      "salesCount": 92,
      "stockCostTjs": 999.9,
      "stockCostUsd": 99.99,
      "stockCount": 1,
      "storeId": "store-12",
      "storeName": "Store 12",
      "topModels": [
        {
          "count": 14,
          "name": "Phone M5",
          "profitUsd": 1801.56,
          "revenueUsd": 4201.68,
        },
        {
          "count": 14,
          "name": "Phone M4",
          "profitUsd": 1601.55,
          "revenueUsd": 4201.68,
        },
        {
          "count": 13,
          "name": "Phone M2",
          "profitUsd": 1701.45,
          "revenueUsd": 3901.56,
        },
        {
          "count": 13,
          "name": "Phone M0",
          "profitUsd": 1701.45,
          "revenueUsd": 3901.56,
        },
        {
          "count": 13,
          "name": "Phone M1",
          "profitUsd": 1501.44,
          "revenueUsd": 3901.56,
        },
      ],
      "unitsSold": 92,
      "unpaidExpensesTjs": 0,
    },
    {
      "bonusDeviceProfitTjs": 0,
      "bonusDeviceProfitUsd": 0,
      "cashTjs": 1130,
      "cashUsd": 113,
      "cogsTjs": 164008.2,
      "cogsUsd": 16400.82,
      "debtFxUsd": 0,
      "expenseFxUsd": 0,
      "expensesByCategory": [
        {
          "amountTjs": 1234,
          "amountUsd": 123,
          "category": "OTHER",
        },
      ],
      "expensesTjs": 1234,
      "expensesUsd": 123,
      "netProfitTjs": 110966.6,
      "netProfitUsd": 11097.06,
      "profitTjs": 112200.6,
      "profitUsd": 11220.06,
      "refundFxUsd": 0,
      "refundPenaltiesUsd": 9.84,
      "refundsCount": 8,
      "revenueTjs": 276110.4,
      "revenueUsd": 27611.04,
      "salesCount": 92,
      "stockCostTjs": 999.9,
      "stockCostUsd": 99.99,
      "stockCount": 1,
      "storeId": "store-13",
      "storeName": "Store 13",
      "topModels": [
        {
          "count": 14,
          "name": "Phone M5",
          "profitUsd": 1601.55,
          "revenueUsd": 4201.68,
        },
        {
          "count": 13,
          "name": "Phone M4",
          "profitUsd": 1701.45,
          "revenueUsd": 3901.56,
        },
        {
          "count": 13,
          "name": "Phone M2",
          "profitUsd": 1701.45,
          "revenueUsd": 3901.56,
        },
        {
          "count": 13,
          "name": "Phone M0",
          "profitUsd": 1701.45,
          "revenueUsd": 3901.56,
        },
        {
          "count": 13,
          "name": "Phone M6",
          "profitUsd": 1701.45,
          "revenueUsd": 3901.56,
        },
      ],
      "unitsSold": 92,
      "unpaidExpensesTjs": 0,
    },
    {
      "bonusDeviceProfitTjs": 0,
      "bonusDeviceProfitUsd": 0,
      "cashTjs": 1160,
      "cashUsd": 116,
      "cogsTjs": 164008.2,
      "cogsUsd": 16400.82,
      "debtFxUsd": 0,
      "expenseFxUsd": 0,
      "expensesByCategory": [
        {
          "amountTjs": 1234,
          "amountUsd": 123,
          "category": "OTHER",
        },
      ],
      "expensesTjs": 1234,
      "expensesUsd": 123,
      "netProfitTjs": 110966.6,
      "netProfitUsd": 11097.06,
      "profitTjs": 112200.6,
      "profitUsd": 11220.06,
      "refundFxUsd": 0,
      "refundPenaltiesUsd": 9.84,
      "refundsCount": 8,
      "revenueTjs": 276110.4,
      "revenueUsd": 27611.04,
      "salesCount": 92,
      "stockCostTjs": 999.9,
      "stockCostUsd": 99.99,
      "stockCount": 1,
      "storeId": "store-16",
      "storeName": "Store 16",
      "topModels": [
        {
          "count": 14,
          "name": "Phone M1",
          "profitUsd": 1801.56,
          "revenueUsd": 4201.68,
        },
        {
          "count": 13,
          "name": "Phone M2",
          "profitUsd": 1701.45,
          "revenueUsd": 3901.56,
        },
        {
          "count": 13,
          "name": "Phone M6",
          "profitUsd": 1701.45,
          "revenueUsd": 3901.56,
        },
        {
          "count": 13,
          "name": "Phone M4",
          "profitUsd": 1701.45,
          "revenueUsd": 3901.56,
        },
        {
          "count": 13,
          "name": "Phone M0",
          "profitUsd": 1501.44,
          "revenueUsd": 3901.56,
        },
      ],
      "unitsSold": 92,
      "unpaidExpensesTjs": 0,
    },
    {
      "bonusDeviceProfitTjs": 0,
      "bonusDeviceProfitUsd": 0,
      "cashTjs": 1170,
      "cashUsd": 117,
      "cogsTjs": 164008.2,
      "cogsUsd": 16400.82,
      "debtFxUsd": 0,
      "expenseFxUsd": 0,
      "expensesByCategory": [
        {
          "amountTjs": 1234,
          "amountUsd": 123,
          "category": "OTHER",
        },
      ],
      "expensesTjs": 1234,
      "expensesUsd": 123,
      "netProfitTjs": 110966.6,
      "netProfitUsd": 11097.06,
      "profitTjs": 112200.6,
      "profitUsd": 11220.06,
      "refundFxUsd": 0,
      "refundPenaltiesUsd": 9.84,
      "refundsCount": 8,
      "revenueTjs": 276110.4,
      "revenueUsd": 27611.04,
      "salesCount": 92,
      "stockCostTjs": 999.9,
      "stockCostUsd": 99.99,
      "stockCount": 1,
      "storeId": "store-17",
      "storeName": "Store 17",
      "topModels": [
        {
          "count": 14,
          "name": "Phone M3",
          "profitUsd": 1801.56,
          "revenueUsd": 4201.68,
        },
        {
          "count": 14,
          "name": "Phone M2",
          "profitUsd": 1601.55,
          "revenueUsd": 4201.68,
        },
        {
          "count": 13,
          "name": "Phone M1",
          "profitUsd": 1701.45,
          "revenueUsd": 3901.56,
        },
        {
          "count": 13,
          "name": "Phone M6",
          "profitUsd": 1701.45,
          "revenueUsd": 3901.56,
        },
        {
          "count": 13,
          "name": "Phone M0",
          "profitUsd": 1501.44,
          "revenueUsd": 3901.56,
        },
      ],
      "unitsSold": 92,
      "unpaidExpensesTjs": 0,
    },
    {
      "bonusDeviceProfitTjs": 0,
      "bonusDeviceProfitUsd": 0,
      "cashTjs": 1180,
      "cashUsd": 118,
      "cogsTjs": 162008.1,
      "cogsUsd": 16200.81,
      "debtFxUsd": 0,
      "expenseFxUsd": 0,
      "expensesByCategory": [
        {
          "amountTjs": 1234,
          "amountUsd": 123,
          "category": "OTHER",
        },
      ],
      "expensesTjs": 1234,
      "expensesUsd": 123,
      "netProfitTjs": 112966.7,
      "netProfitUsd": 11297.07,
      "profitTjs": 114200.7,
      "profitUsd": 11420.07,
      "refundFxUsd": 0,
      "refundPenaltiesUsd": 9.84,
      "refundsCount": 8,
      "revenueTjs": 276110.4,
      "revenueUsd": 27611.04,
      "salesCount": 92,
      "stockCostTjs": 999.9,
      "stockCostUsd": 99.99,
      "stockCount": 1,
      "storeId": "store-18",
      "storeName": "Store 18",
      "topModels": [
        {
          "count": 14,
          "name": "Phone M4",
          "profitUsd": 1801.56,
          "revenueUsd": 4201.68,
        },
        {
          "count": 14,
          "name": "Phone M3",
          "profitUsd": 1801.56,
          "revenueUsd": 4201.68,
        },
        {
          "count": 13,
          "name": "Phone M2",
          "profitUsd": 1701.45,
          "revenueUsd": 3901.56,
        },
        {
          "count": 13,
          "name": "Phone M5",
          "profitUsd": 1701.45,
          "revenueUsd": 3901.56,
        },
        {
          "count": 13,
          "name": "Phone M0",
          "profitUsd": 1501.44,
          "revenueUsd": 3901.56,
        },
      ],
      "unitsSold": 92,
      "unpaidExpensesTjs": 0,
    },
    {
      "bonusDeviceProfitTjs": 0,
      "bonusDeviceProfitUsd": 0,
      "cashTjs": 1190,
      "cashUsd": 119,
      "cogsTjs": 164008.2,
      "cogsUsd": 16400.82,
      "debtFxUsd": 0,
      "expenseFxUsd": 0,
      "expensesByCategory": [
        {
          "amountTjs": 1234,
          "amountUsd": 123,
          "category": "OTHER",
        },
      ],
      "expensesTjs": 1234,
      "expensesUsd": 123,
      "netProfitTjs": 110966.6,
      "netProfitUsd": 11097.06,
      "profitTjs": 112200.6,
      "profitUsd": 11220.06,
      "refundFxUsd": 0,
      "refundPenaltiesUsd": 9.84,
      "refundsCount": 8,
      "revenueTjs": 276110.4,
      "revenueUsd": 27611.04,
      "salesCount": 92,
      "stockCostTjs": 999.9,
      "stockCostUsd": 99.99,
      "stockCount": 1,
      "storeId": "store-19",
      "storeName": "Store 19",
      "topModels": [
        {
          "count": 14,
          "name": "Phone M5",
          "profitUsd": 1601.55,
          "revenueUsd": 4201.68,
        },
        {
          "count": 13,
          "name": "Phone M2",
          "profitUsd": 1701.45,
          "revenueUsd": 3901.56,
        },
        {
          "count": 13,
          "name": "Phone M1",
          "profitUsd": 1701.45,
          "revenueUsd": 3901.56,
        },
        {
          "count": 13,
          "name": "Phone M6",
          "profitUsd": 1701.45,
          "revenueUsd": 3901.56,
        },
        {
          "count": 13,
          "name": "Phone M4",
          "profitUsd": 1701.45,
          "revenueUsd": 3901.56,
        },
      ],
      "unitsSold": 92,
      "unpaidExpensesTjs": 0,
    },
  ],
  "topSuppliersByDebt": [
    {
      "id": "supplier",
      "name": "Supplier",
      "totalDebtUsd": 123.45,
      "totalPaidUsd": 76.55,
      "totalPurchasedUsd": 200,
    },
  ],
  "totalSupplierDebtTjs": 1234.5,
  "totalSupplierDebtUsd": 123.45,
  "unitsSold": 1846,
}
`;

exports[`financial report query optimization preserves all totals > preserves the complete report for store-0 1`] = `
{
  "bonusDeviceProfitTjs": 0,
  "bonusDeviceProfitUsd": 0,
  "cogsTjs": 162008.1,
  "cogsUsd": 16200.81,
  "exchangesCount": 0,
  "expensesTjs": 1234,
  "expensesUsd": 123,
  "freeDeviceBonusesInStock": 1,
  "giftDeviceProfitTjs": 33013.2,
  "giftDeviceProfitUsd": 3301.32,
  "giftDeviceUnitsSold": 11,
  "grossMarginPercent": 41.3,
  "grossProfitTjs": 114102.3,
  "grossProfitUsd": 11410.23,
  "mainWarehouseCashTjs": 345.7,
  "mainWarehouseCashUsd": 34.57,
  "mainWarehouseExpenses": {
    "expenseFxUsd": 0,
    "expensesByCategory": [],
    "expensesTjs": 0,
    "expensesUsd": 0,
    "unpaidExpensesTjs": 0,
  },
  "mainWarehouseStockCostTjs": 1000.1,
  "mainWarehouseStockCostUsd": 100.01,
  "mainWarehouseStockCount": 2,
  "modelCounts": [
    {
      "cogsUsd": 2400.12,
      "count": 14,
      "name": "Phone M6",
      "profitUsd": 1801.56,
      "revenueUsd": 4201.68,
    },
    {
      "cogsUsd": 2200.11,
      "count": 13,
      "name": "Phone M5",
      "profitUsd": 1701.45,
      "revenueUsd": 3901.56,
    },
    {
      "cogsUsd": 2200.11,
      "count": 13,
      "name": "Phone M3",
      "profitUsd": 1701.45,
      "revenueUsd": 3901.56,
    },
    {
      "cogsUsd": 2200.11,
      "count": 13,
      "name": "Phone M1",
      "profitUsd": 1701.45,
      "revenueUsd": 3901.56,
    },
    {
      "cogsUsd": 2400.12,
      "count": 13,
      "name": "Phone M4",
      "profitUsd": 1501.44,
      "revenueUsd": 3901.56,
    },
    {
      "cogsUsd": 2400.12,
      "count": 13,
      "name": "Phone M2",
      "profitUsd": 1501.44,
      "revenueUsd": 3901.56,
    },
    {
      "cogsUsd": 2400.12,
      "count": 13,
      "name": "Phone M0",
      "profitUsd": 1501.44,
      "revenueUsd": 3901.56,
    },
  ],
  "netProfitTjs": 112966.7,
  "netProfitUsd": 11297.07,
  "periodCashBonusesTjs": 0,
  "periodCashBonusesUsd": 0,
  "periodDebtFxTjs": 0,
  "periodDebtFxUsd": 0,
  "periodExpenseFxUsd": 0,
  "periodFreeDeviceBonusesReceived": 1,
  "periodRefundFxTjs": 0,
  "periodRefundFxUsd": 0,
  "periodRefundPenaltiesTjs": 98.4,
  "periodRefundPenaltiesUsd": 9.84,
  "profitTjs": 114200.7,
  "profitUsd": 11420.07,
  "refundsCount": 8,
  "refundsRevenueUsd": 2400.96,
  "revenueTjs": 276110.4,
  "revenueUsd": 27611.04,
  "salesCount": 92,
  "storeBreakdown": [
    {
      "bonusDeviceProfitTjs": 0,
      "bonusDeviceProfitUsd": 0,
      "cashTjs": 1000,
      "cashUsd": 100,
      "cogsTjs": 162008.1,
      "cogsUsd": 16200.81,
      "debtFxUsd": 0,
      "expenseFxUsd": 0,
      "expensesByCategory": [
        {
          "amountTjs": 1234,
          "amountUsd": 123,
          "category": "OTHER",
        },
      ],
      "expensesTjs": 1234,
      "expensesUsd": 123,
      "netProfitTjs": 112966.7,
      "netProfitUsd": 11297.07,
      "profitTjs": 114200.7,
      "profitUsd": 11420.07,
      "refundFxUsd": 0,
      "refundPenaltiesUsd": 9.84,
      "refundsCount": 8,
      "revenueTjs": 276110.4,
      "revenueUsd": 27611.04,
      "salesCount": 92,
      "stockCostTjs": 999.9,
      "stockCostUsd": 99.99,
      "stockCount": 1,
      "storeId": "store-0",
      "storeName": "Store 0",
      "topModels": [
        {
          "count": 14,
          "name": "Phone M6",
          "profitUsd": 1801.56,
          "revenueUsd": 4201.68,
        },
        {
          "count": 13,
          "name": "Phone M5",
          "profitUsd": 1701.45,
          "revenueUsd": 3901.56,
        },
        {
          "count": 13,
          "name": "Phone M3",
          "profitUsd": 1701.45,
          "revenueUsd": 3901.56,
        },
        {
          "count": 13,
          "name": "Phone M1",
          "profitUsd": 1701.45,
          "revenueUsd": 3901.56,
        },
        {
          "count": 13,
          "name": "Phone M4",
          "profitUsd": 1501.44,
          "revenueUsd": 3901.56,
        },
      ],
      "unitsSold": 92,
      "unpaidExpensesTjs": 0,
    },
  ],
  "topSuppliersByDebt": [
    {
      "id": "supplier",
      "name": "Supplier",
      "totalDebtUsd": 123.45,
      "totalPaidUsd": 76.55,
      "totalPurchasedUsd": 200,
    },
  ],
  "totalSupplierDebtTjs": 1234.5,
  "totalSupplierDebtUsd": 123.45,
  "unitsSold": 92,
}
`;

exports[`financial report query optimization preserves all totals > preserves the complete report for store-1 1`] = `
{
  "bonusDeviceProfitTjs": 0,
  "bonusDeviceProfitUsd": 0,
  "cogsTjs": 166008.3,
  "cogsUsd": 16600.83,
  "exchangesCount": 0,
  "expensesTjs": 1234,
  "expensesUsd": 123,
  "freeDeviceBonusesInStock": 1,
  "giftDeviceProfitTjs": 30012,
  "giftDeviceProfitUsd": 3001.2,
  "giftDeviceUnitsSold": 10,
  "grossMarginPercent": 40.5,
  "grossProfitTjs": 113103.3,
  "grossProfitUsd": 11310.33,
  "mainWarehouseCashTjs": 345.7,
  "mainWarehouseCashUsd": 34.57,
  "mainWarehouseExpenses": {
    "expenseFxUsd": 0,
    "expensesByCategory": [],
    "expensesTjs": 0,
    "expensesUsd": 0,
    "unpaidExpensesTjs": 0,
  },
  "mainWarehouseStockCostTjs": 1000.1,
  "mainWarehouseStockCostUsd": 100.01,
  "mainWarehouseStockCount": 2,
  "modelCounts": [
    {
      "cogsUsd": 2400.12,
      "count": 14,
      "name": "Phone M0",
      "profitUsd": 1801.56,
      "revenueUsd": 4201.68,
    },
    {
      "cogsUsd": 2200.11,
      "count": 13,
      "name": "Phone M5",
      "profitUsd": 1701.45,
      "revenueUsd": 3901.56,
    },
    {
      "cogsUsd": 2200.11,
      "count": 13,
      "name": "Phone M4",
      "profitUsd": 1701.45,
      "revenueUsd": 3901.56,
    },
    {
      "cogsUsd": 2600.13,
      "count": 14,
      "name": "Phone M1",
      "profitUsd": 1601.55,
      "revenueUsd": 4201.68,
    },
    {
      "cogsUsd": 2400.12,
      "count": 13,
      "name": "Phone M6",
      "profitUsd": 1501.44,
      "revenueUsd": 3901.56,
    },
    {
      "cogsUsd": 2400.12,
      "count": 13,
      "name": "Phone M3",
      "profitUsd": 1501.44,
      "revenueUsd": 3901.56,
    },
    {
      "cogsUsd": 2400.12,
      "count": 13,
      "name": "Phone M2",
      "profitUsd": 1501.44,
      "revenueUsd": 3901.56,
    },
  ],
  "netProfitTjs": 111955.4,
  "netProfitUsd": 11195.94,
  "periodCashBonusesTjs": 0,
  "periodCashBonusesUsd": 0,
  "periodDebtFxTjs": 0,
  "periodDebtFxUsd": 0,
  "periodExpenseFxUsd": 0,
  "periodFreeDeviceBonusesReceived": 1,
  "periodRefundFxTjs": 0,
  "periodRefundFxUsd": 0,
  "periodRefundPenaltiesTjs": 86.1,
  "periodRefundPenaltiesUsd": 8.61,
  "profitTjs": 113189.4,
  "profitUsd": 11318.94,
  "refundsCount": 7,
  "refundsRevenueUsd": 2100.84,
  "revenueTjs": 279111.6,
  "revenueUsd": 27911.16,
  "salesCount": 93,
  "storeBreakdown": [
    {
      "bonusDeviceProfitTjs": 0,
      "bonusDeviceProfitUsd": 0,
      "cashTjs": 1010,
      "cashUsd": 101,
      "cogsTjs": 166008.3,
      "cogsUsd": 16600.83,
      "debtFxUsd": 0,
      "expenseFxUsd": 0,
      "expensesByCategory": [
        {
          "amountTjs": 1234,
          "amountUsd": 123,
          "category": "OTHER",
        },
      ],
      "expensesTjs": 1234,
      "expensesUsd": 123,
      "netProfitTjs": 111955.4,
      "netProfitUsd": 11195.94,
      "profitTjs": 113189.4,
      "profitUsd": 11318.94,
      "refundFxUsd": 0,
      "refundPenaltiesUsd": 8.61,
      "refundsCount": 7,
      "revenueTjs": 279111.6,
      "revenueUsd": 27911.16,
      "salesCount": 93,
      "stockCostTjs": 999.9,
      "stockCostUsd": 99.99,
      "stockCount": 1,
      "storeId": "store-1",
      "storeName": "Store 1",
      "topModels": [
        {
          "count": 14,
          "name": "Phone M0",
          "profitUsd": 1801.56,
          "revenueUsd": 4201.68,
        },
        {
          "count": 14,
          "name": "Phone M1",
          "profitUsd": 1601.55,
          "revenueUsd": 4201.68,
        },
        {
          "count": 13,
          "name": "Phone M5",
          "profitUsd": 1701.45,
          "revenueUsd": 3901.56,
        },
        {
          "count": 13,
          "name": "Phone M4",
          "profitUsd": 1701.45,
          "revenueUsd": 3901.56,
        },
        {
          "count": 13,
          "name": "Phone M6",
          "profitUsd": 1501.44,
          "revenueUsd": 3901.56,
        },
      ],
      "unitsSold": 93,
      "unpaidExpensesTjs": 0,
    },
  ],
  "topSuppliersByDebt": [
    {
      "id": "supplier",
      "name": "Supplier",
      "totalDebtUsd": 123.45,
      "totalPaidUsd": 76.55,
      "totalPurchasedUsd": 200,
    },
  ],
  "totalSupplierDebtTjs": 1234.5,
  "totalSupplierDebtUsd": 123.45,
  "unitsSold": 93,
}
`;
